# sangitam_notation

./: .gitignore  Cargo.toml  README.md  VNA_FORMAT_SPEC.md  ninnukori.vna
data/: ninnukori_mohanam.vna  sami_ninne_śrī.vna
docs/: LSP_ARCHITECTURE.md  sahitya_gati_encoding.md  sahitya_grouping_options.md  tala_encoding_options.md  tala_option5_variations.md
editor/: .gitignore  gamaka-latex-example.tex  gamaka-markers-example.tex  index.html  package-lock.json  package.json  test-wasm.html  tsconfig.json  vite.config.ts
editor/src/: App.css  App.tsx  example-usage-wasm.ts  example-usage.ts  latex-pdf-generator.js  parser.test.ts  parser.ts  wasm-parser-safe.ts  wasm-parser.ts
editor/src/components/: CurveEditor.tsx  GamakaInflectionDemo.tsx  InflectionCurveEditor.tsx  StaffCanvas.tsx  VNAEditor.tsx
editor/src/lib/: curve-engine.ts  inflection-curve-engine.ts  vna-parser-adapter.ts  vna-parser-wasm.ts  vna-parser.ts
editor/src/styles/: editor.css
editor/src/types/: canvas.ts  gamaka.ts  vna.ts
src/: formatter.rs  main.rs  parser.rs  pdf.rs  types.rs  validator.rs
src/lsp/: completion.rs  handlers.rs  hover.rs  mod.rs  server.rs
vna-lsp/: Cargo.toml  package.json
vna-lsp/src/: formatter.rs  lib.rs  main.rs  parser.rs  pdf.rs  sahitya_parser.rs  types.rs  validator.rs  wasm.rs  wasm_types.rs
vna-lsp/src/lsp/: completion.rs  diagnostics.rs  handlers.rs  hover.rs  server.rs
