[package]
name = "vna"
version = "0.1.0"
edition = "2021"
authors = ["Claude Code <claude@anthropic.com>"]
description = "Veena Notation Archive - A structured notation system for Carnatic music"
license = "MIT"
repository = "https://github.com/your-repo/veena-notation"
keywords = ["music", "carnatic", "veena", "notation", "lsp"]
categories = ["command-line-utilities", "text-processing"]

[[bin]]
name = "vna"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

# Text processing
regex = "1.9"
unicode-segmentation = "1.10"

# File handling
walkdir = "2.4"
glob = "0.3"

# PDF generation
printpdf = "0.6"
ab_glyph = "0.2"

# LSP support
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"

# Colors and formatting
colored = "2.0"
indicatif = "0.17"

# Logging
env_logger = "0.10"
log = "0.4"

[dev-dependencies]
pretty_assertions = "1.4"
tempfile = "3.8"